styles.css
* {
  padding: 0;
  margin: 0;
}
body{
  font-family: 'Raleway';
  font-size: 20px;
  font-style: normal;
  font-variant: normal;
  font-weight: 400;
  line-height: 26.4px;
    width: 100%;
    background: url('img/milwaukee.jpg');
    background-position: center top;
    color: white;
    height:100%;
    width: auto;
    max-height: 900px;
    background-attachment: fixed;
}
.typed-cursor{
    opacity: 1;
    -webkit-animation: blink 0.9s infinite;
    -moz-animation: blink 0.9s infinite;
    animation: blink 0.9s infinite;
}
@keyframes blink{
    0% { opacity:1; }
    50% { opacity:0; }
    100% { opacity:1; }
}
@-webkit-keyframes blink{
    0% { opacity:1; }
    50% { opacity:0; }
    100% { opacity:1; }
}
@-moz-keyframes blink{
    0% { opacity:1; }
    50% { opacity:0; }
    100% { opacity:1; }
}
.im{
    font-family: 'Raleway';
    font-size: 60px;
    font-style: normal;
    font-variant: normal;
    font-weight: 500;
    line-height: 36.4px;
    color: white;
    padding-top: 150px;
    height: 655px;

}
.img{
  border-radius: 50%;
  height: 150px;
  width: 150px;
  float: left;
  max-width: 100%;
  margin-bottom: auto;
  margin-top: 50px;
  margin-left: 37%
}
.outerDiv {
    display: inline-flex;  <== This is responsible for vertical alignment
    height: 400px;
    color: white;
    margin-left: 50px;
    margin-top: 150px;
}
.innerDiv {
    margin: auto 5px;   <== This is responsible for vertical alignment
}
h1.headline {
  font-size: 40px;
  padding-top: 30px;
  padding-bottom: 10px;
  padding-left: 55%;
  color: black;
}
p.about{
  float: right;
  line-height: 0px;
  padding-left: 65%;
  margin-left: 600px;
  background-color: white;
}
p.footer{
  padding-top: 20px;
  padding-bottom: 20px;
}
h1.contact{
  margin-top: 30px;
  color: black;
}
.about{
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
  height: 100%;
  min-height: 100%;
  background-color: white;
  color: black;
}
.aboutname{
  width: 67%;
  float: right;
  padding-top: 10px;
  padding-right: 15px;
  padding-bottom: 15px;
  margin-left: 64%;

}
.imbackground{
  display: table;
  width: 100%;
  background: url('img/milwaukee.jpg');
  background-position: center top;
  color: white;
  height:100%;
  width: auto;
  background-attachment: fixed;
  background-repeat: no-repeat;
}
.white{
  background-color: white;
  width: 100%;
}
.contact{
  background-color: white;
  color: black;
  padding-top: 30px;
}
.header{
padding-top: 30px;
}
.work{
  padding-top: 30px
}
.column {
    display: table-cell;
    width: 100%;
}
.abouttxt{
    margin-top: 20px;
    padding-left: 55%;
    padding-bottom: 30px;
    padding-right: 10px;
}
.icons{
  padding-top: 20px;
  padding-bottom: 20px;
}
.git{
}
.cog1{
  padding-right: 20px;
}
.cog2{
  padding-left: 20px;
}
.coffee{
  padding-top: 10px;
}
.whatido{
  padding-top: 20px;
  padding-bottom: 20px;
  background-color: rgba(0, 0, 0, 0.46);
  z-index: -1;
}
a{
  color: inherit;
}
.fa-github-square:hover{
    color: #373737;
    -moz-osx-font-smoothing: grayscale;
    -webkit-transition-property: color;
    transition-property: color;
    -webkit-transition-duration: 0.5s;
    transition-duration: 0.5s;
}
.fa-twitter-square:hover{
    color: #373737;
    -moz-osx-font-smoothing: grayscale;
    -webkit-transition-property: color;
    transition-property: color;
    -webkit-transition-duration: 0.5s;
    transition-duration: 0.5s;
}
.fa-reddit-square:hover{
    color: #373737;
    -moz-osx-font-smoothing: grayscale;
    -webkit-transition-property: color;
    transition-property: color;
    -webkit-transition-duration: 0.5s;
    transition-duration: 0.5s;
}
.fa-envelope-square:hover{
    color: #373737;
    -moz-osx-font-smoothing: grayscale;
    -webkit-transition-property: color;
    transition-property: color;
    -webkit-transition-duration: 0.5s;
    transition-duration: 0.5s;
}
.footer{
}
p.do{
  margin-left: 50px;
  margin-right: 50px;
  width: 60%;
  padding-top: 10px;
}
[class*="col-"] {
    float: left;
    padding: 0px;
}
.col-1 {width: 8.33%;}
.col-2 {width: 16.66%;}
.col-3 {width: 25%;}
.col-4 {width: 33.33%;}
.col-5 {width: 41.66%;}
.col-6 {width: 50%;}
.col-7 {width: 58.33%;}
.col-8 {width: 66.66%;}
.col-9 {width: 75%;}
.col-10 {width: 83.33%;}
.col-11 {width: 91.66%;}
.col-12 {width: 100%;}
@media screen and (min-width: 480px) {
    body {
        background-color: grey;
    }
}
html{
  font-size: 11px;
}
@media screen only and (min-width: 600px){
  html{
    font-size: 12px;
  }
}

